<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@drawable/white" android:id="@+id/mainTableLayout">
	<TableRow android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/mainSocialRow">
		<TextView android:layout_marginLeft="8dip" android:gravity="center_vertical"
			android:typeface="sans" android:textStyle="bold" android:text="@string/main_social"
			android:layout_width="fill_parent" android:layout_height="40dip"
			android:textSize="25sp" android:textColor="#000000" android:id="@+id/txtMainSocial"></TextView>
	</TableRow>
	<View android:background="#f00" android:id="@+id/mainRowSeparator" android:layout_height="5px" android:layout_width="wrap_content"></View>
	<TableRow android:id="@+id/mainAuthRow" android:layout_height="wrap_content"
		android:layout_width="wrap_content">
		<TextView android:layout_marginLeft="8dip" android:gravity="center_vertical"
			android:typeface="sans" android:id="@+id/txtMainAuth"
			android:textStyle="bold" android:layout_width="fill_parent"
			android:textColor="#000000" android:layout_height="40dip" android:textSize="25sp" android:text="@string/txtMainAuth"></TextView>
	</TableRow>
	<View android:background="#f00" android:layout_width="wrap_content" android:layout_height="5px" android:id="@+id/mainRowSeparator"></View>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/mainCouponsRow">
		<TextView android:layout_marginLeft="8dip" android:gravity="center_vertical"
			android:typeface="sans" android:textStyle="bold"
			android:layout_width="fill_parent" android:layout_height="40dip"
			 android:textColor="#000000" android:textSize="25sp" android:text="@string/txtCoupons" android:id="@+id/txtMainCoupons"></TextView>
	</TableRow>
	<View android:id="@+id/mainRowSeparator"  android:background="#f00" android:layout_width="wrap_content" android:layout_height="5px"></View>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/mainProductRow">
		<TextView android:layout_marginLeft="8dip" android:gravity="center_vertical"
			android:typeface="sans" android:textStyle="bold"
			android:layout_width="fill_parent" android:layout_height="40dip"
			android:textSize="25sp"  android:textColor="#000000" android:text="@string/txtMainProduct"
			android:id="@+id/txtMainProduct"></TextView>
	</TableRow>
	<View android:id="@+id/mainRowSeparator"  android:background="#f00" android:layout_width="wrap_content" android:layout_height="5px"></View>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/mainButRow"
		android:paddingTop="25dip">
		<LinearLayout android:layout_width="wrap_content"
			android:id="@+id/mainButLayout" android:layout_gravity="center_horizontal"
			android:layout_height="match_parent">
			<Button android:layout_marginLeft="8dip" android:id="@+id/butMainClose"
				android:layout_width="125dip" android:layout_marginRight="8dip"
				android:text="@string/butClose" android:layout_height="wrap_content"></Button>
			<Button android:layout_marginLeft="8dip" android:id="@+id/butMainHelp"
				android:layout_width="125dip" android:layout_marginRight="8dip"
				android:text="@string/butHelp" android:layout_height="wrap_content"></Button>
		</LinearLayout>
	</TableRow>
</TableLayout>
